--- a/public/topic.html
+++ b/public/topic.html
@@ -17,7 +17,7 @@
             <label class="operate" dropdown>
                 更多
                 <ul class="dropdown-menu">
-                    <li ng-if="User.rank>1||User.rank===0" ng-click="delete(topic.topic._id,'p')"><span>删除</span>
+                    <li ng-if="User.rank>1||User.rank===0||User._id===topic.topic.user_id._id" ng-click="delete(topic.topic._id,'p')"><span>删除</span>
                     </li>
                     <li ng-if="User.rank>1||User.rank===0"><span>禁言</span></li>
                     <li ng-click="follow(topic.topic.user_id._id)"><span>关注</span></li>
@@ -27,10 +27,10 @@
             <label>1楼</label><label>{{topic.topic.createDate|dateCustom}}</label>
         </footer>
     </li>
-    <li class="topic-item clearfloat" ng-repeat="comment in topic.comments">
+    <li id="{{comment._id}}" class="topic-item clearfloat" ng-repeat="comment in topic.comments">
         <div class="topic-left">
             <i title="已关注" ng-show="comment.user_id.isFollow" class="followed"></i>
-            <a id="{{comment.user_id._id}}" href="/user/{{comment.user_id._id}}">
+            <a href="/user/{{comment.user_id._id}}">
                 <img class="face" ng-src="uploads/faces/{{comment.user_id.face}}" src="images/default.jpg" alt="">
             </a>
             <p>{{comment.user_id.nick}}</p>
@@ -41,7 +41,7 @@
             <label class="operate" dropdown>
                 更多
                 <ul class="dropdown-menu">
-                    <li ng-if="User.rank>1||User.rank===0" ng-click="delete(comment._id,'c')"><span>删除</span>
+                    <li ng-if="User.rank>1||User.rank===0||User._id===comment.user_id._id" ng-click="delete(comment._id,'c')"><span>删除</span>
                     </li>
                     <li ng-if="User.rank>1||User.rank===0"><span>禁言</span></li>
                     <li ng-click="follow(comment.user_id._id)"><span>关注</span></li>
