--- a/public/topic.html
+++ b/public/topic.html
@@ -1,6 +1,7 @@
 <ul class="topic-ul">
     <li class="topic-item clearfloat" ng-if="topic.topic!==null">
         <input type="hidden" id="post_user_id" value="{{topic.topic.user_id._id}}">
+        <input type="hidden" id="reply_author_id" value="">
         <div class="topic-left">
             <i title="已关注" ng-show="topic.topic.user_id.isFollow" class="followed"></i>
             <a href="/user/{{topic.topic.user_id._id}}">
@@ -35,9 +36,12 @@
             </a>
             <p>{{comment.user_id.nick}}</p>
         </div>
-        <div class="topic-right" compile="comment.content"></div>
+        <div class="topic-right">
+            <div class="reply_content" compile="comment.parent_id.content"></div>
+            <div compile="comment.content"></div>
+        </div>
         <footer>
-            <label class="reply left">回复</label>
+            <label class="reply left" reply="{{comment._id}},{{comment.user_id.nick}}">回复</label>
             <label class="operate" dropdown>
                 更多
                 <ul class="dropdown-menu">
