--- a/public/plaza.html
+++ b/public/plaza.html
@@ -14,22 +14,41 @@
         <li><a href="/c">漫画</a></li>
         <li><a href="/g">游戏</a></li>
         <li><a href="/m">音乐</a></li>
-        <li><span class="plaza-panel-btn">面板</span></li>
+        <!--<li><span class="plaza-panel-btn">面板</span></li>-->
     </ul>
 </div>
 <!--在线用户组-->
 <div class="plaza-group">
     <div class="plaza-panel">
         <div class="case">
-            <h3>欢迎来到广场</h3>
+            <header><h3>欢迎来到广场</h3></header>
         </div>
         <div class="case">
             <header>最新主题</header>
-            <div>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</div>
+            <div ng-repeat="recent in recents" class="clearfloat">
+                <div class="left"><a href="/user/{{recent.user_id._id}}"><img class="face" ng-src="{{recent.user_id.face?'/uploads/faces/'+recent.user_id.face:'/uploads/faces/default.jpg'}}"></a></div>
+                <div><a href="{{recent.parent_url}}/{{recent._id}}/{{recent.title}}">{{recent.title}}</a></div>
+                <footer class="right">{{recent.createDate|dateCustom}}</footer>
+            </div>
         </div>
-        <div class="case">
-            <header>论坛状态</header>
-            <div class="inline-block">11</div>
+        <div class="case status">
+            <header class="text-left">论坛状态</header>
+            <div class="inline-block">
+                <header>在线</header>
+                <footer id="onlineMembers">0</footer>
+            </div>
+            <div class="inline-block">
+                <header>用户</header>
+                <footer>{{status.userCount}}</footer>
+            </div>
+            <div class="inline-block">
+                <header>文章</header>
+                <footer>{{status.postCount}}</footer>
+            </div>
+            <div class="inline-block">
+                <header>评论</header>
+                <footer>{{status.commentCount}}</footer>
+            </div>
         </div>
     </div>
     <ul id="plaza-groups">
