--- a/public/plaza.html
+++ b/public/plaza.html
@@ -14,11 +14,10 @@
         <li><a href="/c">漫画</a></li>
         <li><a href="/g">游戏</a></li>
         <li><a href="/m">音乐</a></li>
-        <!--<li><span class="plaza-panel-btn">面板</span></li>-->
     </ul>
 </div>
 <!--在线用户组-->
-<div class="plaza-group">
+<div class="user-group">
     <div class="plaza-panel">
         <div class="case">
             <header><h3>欢迎来到广场</h3></header>
