--- a/public/user.html
+++ b/public/user.html
@@ -4,6 +4,7 @@
         <ul class="dropdown-menu">
             <li><span>主题</span></li>
             <li><span>回复</span></li>
+            <li><span>通知</span></li>
             <li><span ng-click="url = 'template/user/user-follow.html'">关注</span></li>
         </ul>
     </div>
