--- a/public/user.html
+++ b/public/user.html
@@ -2,9 +2,9 @@
     <div class="dropdown-group right">
         <button class="btn dropdown">管理<i class="dropdown-icon-down"></i></button>
         <ul class="dropdown-menu">
-            <li><span>主题</span></li>
-            <li><span>回复</span></li>
-            <li><span>通知</span></li>
+            <li><span ng-click="url = 'template/user/user-topic.html'">主题</span></li>
+            <li><span ng-click="url = 'template/user/user-comment.html'">评论</span></li>
+            <li><span ng-click="url = 'template/user/user-reply.html'">回复</span></li>
             <li><span ng-click="url = 'template/user/user-follow.html'">关注</span></li>
         </ul>
     </div>
