--- a/public/main.html
+++ b/public/main.html
@@ -1,7 +1,7 @@
 <div class="home">
     <div class="col25">
         <div class="item animation">
-            <header>动画</header>
+            <header><a href="/a">动画</a></header>
             <div class="clearfloat" ng-repeat="a in main.a">
                 <div class="title"><a href="/a/{{a.post_id._id}}/{{a.post_id.title}}">{{a.post_id.title}}</a></div>
                 <article class="left"><a href="/user/{{a.user_id._id}}"><img src="uploads/faces/{{a.user_id.face}}"></a></article>
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="item game">
-            <header>游戏</header>
+            <header><a href="/g">游戏</a></header>
             <div class="clearfloat" ng-repeat="a in main.g">
                 <div class="title"><a href="/a/{{a.post_id._id}}/{{a.post_id.title}}">{{a.post_id.title}}</a></div>
                 <article class="left"><a href="/user/{{a.user_id._id}}"><img src="uploads/faces/{{a.user_id.face}}"></a></article>
@@ -29,7 +29,7 @@
     </div>
     <div class="col25">
         <div class="item comic">
-            <header>漫画</header>
+            <header><a href="/c">漫画</a></header>
             <div class="clearfloat" ng-repeat="a in main.c">
                 <div class="title"><a href="/a/{{a.post_id._id}}/{{a.post_id.title}}">{{a.post_id.title}}</a></div>
                 <article class="left"><a href="/user/{{a.user_id._id}}"><img src="uploads/faces/{{a.user_id.face}}"></a></article>
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="item other">
-            <header>其他</header>
+            <header><a href="/o">其他</a></header>
             <div class="clearfloat" ng-repeat="a in main.o">
                 <div class="title"><a href="/a/{{a.post_id._id}}/{{a.post_id.title}}">{{a.post_id.title}}</a></div>
                 <article class="left"><a href="/user/{{a.user_id._id}}"><img src="uploads/faces/{{a.user_id.face}}"></a></article>
@@ -57,7 +57,7 @@
     </div>
     <div class="col25">
         <div class="item music">
-            <header>音乐</header>
+            <header><a href="/m">音乐</a></header>
             <div class="clearfloat" ng-repeat="a in main.m">
                 <div class="title"><a href="/a/{{a.post_id._id}}/{{a.post_id.title}}">{{a.post_id.title}}</a></div>
                 <article class="left"><a href="/user/{{a.user_id._id}}"><img src="uploads/faces/{{a.user_id.face}}"></a></article>
