--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <script src="js/vendor/angularjs/angular-cookies.min.js"></script>
     <script src="js/vendor/base64/base64.min.js"></script>
     <!--<script src="js/acgfun.min.js"></script>-->
-    <script src="js/socket.js"></script>
+    <!--<script src="js/socket.js"></script>-->
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
