--- a/public/login.html
+++ b/public/login.html
@@ -1,7 +1,7 @@
 <div id="login_content" login>
     <form id="login" ng-submit="login()">
         <div class="field">
-            <label>邮箱&nbsp;&nbsp;<span style="padding: 3px 10px;border-radius: 100%;" title="技术问题，目前谷歌上无法保存表单...请谅解">?</span></label>
+            <label>邮箱</label>
             <input placeholder="邮箱" autofocus="true" type="email" title="例如:xxxx@qq.com" ng-model="login_email" tabindex="1" required>
         </div>
         <div class="field">
