--- a/public/main.html
+++ b/public/main.html
@@ -117,3 +117,4 @@
             </div>
     </div>
 </div>
+<div class="beian">Power By NodeJS&&Angularjs，<a href="http://www.miibeian.gov.cn/?spm=a1z1s.6843761.1110930425.48.vv3kPM" target="_blank">沪ICP备14032680号</a></div>
