--- a/public/plaza.html
+++ b/public/plaza.html
@@ -10,7 +10,7 @@
 <!--导航-->
 <div class="plaza-nav clearfloat">
     <ul>
-        <li><a href="/a">主页</a></li>
+        <li><a href="/">主页</a></li>
         <li><a href="/a">动画</a></li>
         <li><a href="/c">漫画</a></li>
         <li><a href="/g">游戏</a></li>
