--- a/public/user.html
+++ b/public/user.html
@@ -72,7 +72,7 @@
             <div class="progressbar"></div>
         </div>
         <div class="modal-body">
-            <input id="file" type="file" ng-file-select="onFileSelect($files)" accept="image/jpg|image/png">
+            <input id="file" type="file" ng-file-select="onFileSelect($files)" accept="image/*">
 
             <p>只能上传jpg,png文件(最大100kb)</p>
         </div>
