备案信息更改

--- a/public/main.html
+++ b/public/main.html
@@ -1,4 +1,4 @@
-<div class="home">
+﻿<div class="home">
     <div class="col25">
         <div class="item animation">
             <header><a href="/a">动画</a></header>
@@ -117,4 +117,4 @@
             </div>
     </div>
 </div>
-<div class="beian">Power By NodeJS&&Angularjs，<a href="http://www.miibeian.gov.cn/?spm=a1z1s.6843761.1110930425.48.vv3kPM" target="_blank">沪ICP备14032680号</a></div>
+<div class="beian">Power By NodeJS&&Angularjs，<a href="http://www.miibeian.gov.cn/?spm=a1z1s.6843761.1110930425.48.vv3kPM" target="_blank">沪ICP备14032680号-1</a></div>
